sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: ';' expected but '<-' found.
    i<-0; 
     ^AlgBubbleSort1:10: error: ')' expected but ';' found.
      if(isSmaller(getValue(i);,getValue(i+1);)){
                              ^AlgBubbleSort1:10: error: illegal start of statement
      if(isSmaller(getValue(i);,getValue(i+1);)){
                               ^AlgBubbleSort1:10: error: illegal start of statement
      if(isSmaller(getValue(i);,getValue(i+1);)){
                                              ^