sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var nbValue = getValueCount();
  var fin = false;
  while(!fin) {
    var echange = false;
    
    i<-0; 
    while(i < nbValue-1) {
      if(isSmaller(getValue(i);,getValue(i+1);)){
        swap(i,i+1);
      }
    }
    
    
    if(echange) {
      fin = false;
    }
  }
}
